--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,20 @@
   position: relative;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .bg {
   background: radial-gradient(#008DC3, #003B60);
-  position: relative;
-  width: 500px;
-  height: 700px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  margin: auto;
 }
 
 #head {
